feat: update topic (#1)
